--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -254,7 +254,7 @@ body .modal-backdrop {
   position: relative;
   z-index: 9;
   overflow: hidden;
-  padding: 60px 0 225px;
+  padding: 60px 0 80px;
   background: url("../images/bg/banner-bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
